--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!------------------------------------------------- Hero Section------------------------------------------------------------------------------>
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Vineeth Reddy Kondeti</h1>
+      <h1>Vineeth Kumar Reddy  Kondeti</h1>
       <p>I'm <span class="typed" data-typed-items="Front End Developer | AI-ML Engineer"></span></p>
     </div>
   </section>
