--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- End Header -->
 
 <!------------------------------------------------- Hero Section------------------------------------------------------------------------------>
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center" style="background-image: url();">
     <div class="hero-container" data-aos="fade-in">
       <h1>Vineeth Kumar Reddy  Kondeti</h1>
       <p>I'm <span class="typed" data-typed-items="Front End Developer | AI-ML Engineer"></span></p>
