--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
+         <div>
+      <p style="color: aqua;">No of visits: <script type="text/javascript" src="https://services.webestools.com/cpt_pages_views/74952-13-1.js"></script></p>
+      </div>
         <img src="IMG_20220413_191559_226.jpg" alt="" class="img-fluid rounded-circle" style="width: 200px;">
         <h1 class="text-light"><a href="index.html">Vineeth Kumar Reddy Kondeti</a></h1>
         <div class="social-links mt-3 text-center">
