--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+     <link rel="shortcut icon" href="https://t4.ftcdn.net/jpg/04/91/83/65/360_F_491836569_7KekbEjiTEWS6CKbqTwTvwyUR0nXzxSm.jpg" type="image/x-icon">
 
 <!------------------------------------------------------------------------------------------------------>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
