--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>kondeti.vineeth@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Course:</strong> <span>B.Tech,CSE with AI-ML(CSM)</span></li>
                   <br><br>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Mini-Project:</strong> <span><a href="">Fertilizer Prediction System</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Mini-Project:</strong> <span><a href="https://github.com/vineethreddykvr/Fertilizer-prediction-system">Fertilizer Prediction System</a></span></li>
 
                 </ul>
               </div>
@@ -190,7 +190,7 @@
             <h3 class="resume-title">Mini -project</h3>
             <div class="resume-item">
               <ul>
-                <li><a href="">Fertilizer Prediction System</a></li>
+                <li><a href="https://github.com/vineethreddykvr/Fertilizer-prediction-system">Fertilizer Prediction System</a></li>
                 <li><a href="">Multi Media</a></li>
                </ul>
             </div>
