--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>kondeti.vineeth@gmail.com</p>
               </div>
 
             
-              <img class=" bounce fa fa-angle-double-down"  src="https://st3.depositphotos.com/5366154/13886/i/450/depositphotos_138866008-stock-photo-fire-letter-v-of-burning.jpg" alt="" style="width: 400px; height:400px;">            </div>
+              <img class="vineethkvr"  src="https://st3.depositphotos.com/5366154/13886/i/450/depositphotos_138866008-stock-photo-fire-letter-v-of-burning.jpg" alt="" style="width: 400px; height:400px;">            </div>
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
