--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               </div>
 
             
-              <img class="vineethkvr"  src="https://st3.depositphotos.com/5366154/13886/i/450/depositphotos_138866008-stock-photo-fire-letter-v-of-burning.jpg" alt="" style="width: 400px; height:400px;">            </div>
+              <img class="kvr"  src="https://st3.depositphotos.com/5366154/13886/i/450/depositphotos_138866008-stock-photo-fire-letter-v-of-burning.jpg" alt="" style="width: 400px; height:400px;">            </div>
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
