--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <a href="mailto:kondeti.vineeth@gmail.com"><div class="text-center"><button type="submit">Send Message</button></div></a>
             </form>
           </div>
 
