--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1 class="text-light"><a href="index.html">Vineeth Kumar Reddy Kondeti</a></h1>
         <div class="social-links mt-3 text-center">
           
-          <a href="https://ne-np.facebook.com/vinnu.kondeti" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://github.com/vineethreddykvr/" class="facebook"><i class="bi bi-github"></i></a>
           <a href="https://www.instagram.com/vineethkumarreddy_kvr/" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="https://in.linkedin.com/in/vineeth-reddy-kondeti-6114a224b" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
