--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <li><a href="">Multi Media</a></li>
                </ul>
             </div>
-          <h3 class="resume-title">Achievements</h3> <div class="resume-item"> <li>National hackathon winner( INventron) conducted by MLRIT Hyderabad. </li>
+          <h3 class="resume-title">Achievements</h3> <div class="resume-item"> <li>National hackathon winner( Inventron) conducted by MLRIT Hyderabad. </li>
             <img src="WhatsApp Image 2023-01-30 at 11.57.49.jpg" style="height: 290px; width: 570px;" alt="">
             </div>
           </div>
@@ -315,15 +315,15 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="" method="post" role="form" class="php-email-form">
+            <form  class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
+                  <input type="text" name="name" class="form-control" id="name" >
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                  <input type="email" class="form-control" name="email" id="email" >
                 </div>
               </div>
               <div class="form-group">
