--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                    <center style="margin-left:140px ; color: orange;"> Projects</center>
                   </h2>
                   <li><i class="bi bi-chevron-right"></i> <strong>Major-Project:</strong> <span><a href="">-</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Aditional-Project:</strong> <span><a href="">Multi Media</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Hackthon-Project:</strong> <span><a href="https://github.com/vineethreddykvr/AgriX">AgriX</a></span></li>
 
                 </ul>
               </div>
