--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ alert("thanks you ❤️")
                      <h3 class="resume-title">Achievements</h3> <div class="resume-item"> <li>National hackathon winner( INventron) conducted by MLRIT Hyderabad. </li> 
                       <div id="slideshow">
                         <div class="slide-wrapper">
-                          <div class="slide"></div>
-                          <div class="slide"></div>
-                          <div class="slide"></div>
+                          <div class="slide"> <img src="/img2.jpg" style="width:600px;" alt=""></div>
+                          <div class="slide"><img src="/img3.jpg" style="width:600px; height: 300px;" alt=""></div>
+                          <div class="slide"><img src="/img1.jpg" style="width:600px; height: 300px;" alt=""></div>
                         </div>
                       </div>
                       
