--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ alert("thanks you ❤️")
 <!---------------------------------------------------Header-------------------------------------------------------------------------------------------------->
   <header id="header">
     <div class="d-flex flex-column">
-      
+      <div style="width:max-content;height:35px;">
+        <p style="color: aqua;">No of visits: <script type="text/javascript" src="https://services.webestools.com/cpt_pages_views/74957-13-1.js"></script></p>
+        </div>
         
       <div class="profile">
         <img src="IMG_20220413_191559_226.jpg" alt="" class="img-fluid rounded-circle" style="width: 200px;">
