--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center" style="background-image: url(IMG_20220413_191559_226.jpg);">
     <div class="hero-container" data-aos="fade-in">
       <h1 style="color:white">Vineeth Kumar Reddy  Kondeti</h1>
-      <p>I'm <span class="typed" data-typed-items="AI-ML Engineer | Front End Developer |"></span></p>
+      <p>I'm <span class="typed" data-typed-items="AI-ML Engineer | Full Stack Web developer |"></span></p>
     </div>
   </section>
   <!-- End Hero -->
@@ -130,7 +130,7 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
           
-          <br>  <h3>Front end developer &amp; Ai-ml engineer</h3>
+          <br>  <h3>Full Stack Web developer &amp; Ai-ml engineer</h3>
            <br>
             <div class="row">
               <div class="col-lg-5">
@@ -145,7 +145,7 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
               </div>
               <div class="col-lg-7">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li> 
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BTECH</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>kondeti.vineeth@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Course:</strong> <span>B.Tech,CSE with AI-ML(CSM)</span></li>
@@ -179,7 +179,13 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
                   
                   <div class="resume-item"> <p><em><strong> CMR Collage OF Engeneering &amp; Technology</strong> </em></p> <h5>2020 - 2024</h5> 
                     <ul> <li>B.Tech,CSM(Computer Science with AI-ML Specialization), CGPA : 8.72</li> </ul> </div> <h3 class="resume-title">projects</h3> 
-                    <div class="resume-item"> <ul> <li><a href="https://github.com/vineethreddykvr/Fertilizer-prediction-system">Fertilizer Prediction System</a></li><li><a href="https://github.com/vineethreddykvr/AgriX">Agrix</a></li> <li><a href="">Multi Media</a></li> </ul> </div>
+                    <div class="resume-item"> <ul> <li><a href="https://github.com/vineethreddykvr/Fertilizer-prediction-system">Fertilizer Prediction System</a></li>
+                      <li><a href="https://github.com/vineethreddykvr/AgriX">Agrix</a></li>
+                       <li><a href="https://github.com/vineethreddykvr/AGRI-CROPSCAN">Agrix cropscan</a></li>
+                       <li><a href="">Multi Media</a></li>
+
+                      </ul>
+                     </div>
                      <h3 class="resume-title">Achievements</h3>
                       <div class="resume-item"> 
                         <li>National hackathon winner( INventron) conducted by MLRIT Hyderabad. </li> 
@@ -224,7 +230,7 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
         </div>
 
         <div class="progress">
-          <span class="skill">Python <i class="val">77%</i></span>
+          <span class="skill">Python <i class="val">75%</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
@@ -240,6 +246,12 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
           <span class="skill">Data structures <i class="val">70%</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+        <div class="progress">
+          <span class="skill">React <i class="val">80%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
       </div>
@@ -261,7 +273,7 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
         </div>
 
         <div class="progress">
-          <span class="skill">React =>JavaScript <i class="val">80%</i></span>
+          <span class="skill">JavaScript <i class="val">80%</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
@@ -272,7 +284,12 @@ fetch('https://vinnu-e4ac8-default-rtdb.firebaseio.com/vineeth.json', {
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
-
+        <div class="progress">
+          <span class="skill">Nodejs <i class="val">70%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
       </div>
 
     </div>
